Replace all empty lines with <p> HTML tags in Javadoc.
Clean up grammatical and spelling errors in Javadoc.

Fix syntax errors in Javadoc tags (e.g. {@literal}).

Use pattern variables in Object.equals(:Object) methods.